--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h3>Build Climber and Train Stopper</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
                 work.
-                That's why I am learning and mastering web development. I will not stop until I become the Web
+                That's why I, am learning and mastering web development. I will not stop until I become the Web
                 Development
                 Hero.</p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/">HIER ME</a>
@@ -29,6 +29,20 @@
         <div class="half-width">
             <img src="images/Emran-bg.png" alt="">
         </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+        <div half-width>
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+
+        </div>
+
     </section>
 
 </body>
